# blindbit-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
blindbit-cli/: Cargo.toml
blindbit-cli/src/: main.rs
blindbit-lib/: Cargo.toml  build.rs
blindbit-lib/examples/: stream_oracle.rs
blindbit-lib/proto/: indexing_server.proto  oracle_service.proto
blindbit-lib/src/: lib.rs
blindbit-lib/src/scanner/: changeset.rs  config.rs  electrum_index.rs  load.rs  mod.rs  p2p.rs  scanner.rs  scanning.rs  types.rs  utils.rs
blindbit-test/: Cargo.toml
blindbit-test/src/: main.rs
friglet/: Cargo.toml
friglet/src/: main.rs  types.rs
friglet/src/electrum/: mod.rs
friglet/src/server/: mod.rs
tests/: Cargo.toml
tests/src/: main.rs
