[package]
name = "blindbit-cli"
version = "0.1.0"
edition = "2024"

# Default binary (main.rs)
[[bin]]
name = "blindbit-cli"
path = "src/main.rs"

[dependencies]
blindbit-lib = { path = "../blindbit-lib" }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
bitcoin = "0.32.7"

