[package]
name = "blindbit-cli"
version = "0.1.0"
edition = "2024"

# Default binary (main.rs)
[[bin]]
name = "blindbit-cli"
path = "src/main.rs"

[dependencies]
blindbit-lib = { path = "../blindbit-lib", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
bitcoin = "0.32.7"

# due to bitcoin-p2p using a different version
bitcoin-rev = { git = "https://github.com/rust-bitcoin/rust-bitcoin", rev = "16cc257c3695dea0e7301a5fa9cab44b8ed60598", package = "bitcoin" }
