[package]
name = "blindbit-lib"
version = "0.1.0"
edition = "2024"

[build-dependencies]
tonic-prost-build = "0.14.2"

[dependencies]
# bitcoin = "0.32.7"
# bitcoin = { version = "0.32.7", features = ["secp256k1"] }
# bdk_sp = { git = "https://github.com/bitcoindevkit/bdk-sp", version = "0.1.0", features = ["serde"] }
# indexer = { git = "https://github.com/bitcoindevkit/bdk-sp", version = "0.1.0", features = ["serde"] }
bdk_sp = { path = "/Users/setorblagogee/dev/bdk-sp/silentpayments", features = ["serde"] }
indexer = { path = "/Users/setorblagogee/dev/bdk-sp/indexer", features = ["serde"] }

prost = "0.14.1"
prost-types = "0.14.1"
serde = "1.0.228"
tokio = "1.48.0"
tonic = { version = "0.14.2", features = ["tls-ring", "tls-webpki-roots"] }
tonic-prost = "0.14.2"
hex = "0.4.3"
bitcoin = "0.32.7"
silentpayments = { git = "https://github.com/cygnet3/rust-silentpayments", version = "0.4.1" }

