[package]
name = "friglet"
version = "0.1.0"
edition = "2024"
authors.workspace = true

[features]
default = []
# serde = ["serde"]

[dependencies]
blindbit-lib = { path = "../blindbit-lib", features = ["serde"] }
axum = "0.8.7"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"]}

