[package]
name = "friglet"
version = "0.1.0"
edition = "2024"
authors.workspace = true

[features]
default = []
# serde = ["serde"]

[dependencies]
blindbit-lib = { path = "../blindbit-lib", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
axum = "0.8.7"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"]}
bitcoin = "0.32.7"

# due to bitcoin-p2p using a different version
bitcoin-rev = { git = "https://github.com/rust-bitcoin/rust-bitcoin", rev = "16cc257c3695dea0e7301a5fa9cab44b8ed60598", package = "bitcoin" }
