[package]
name = "friglet"
version = "0.1.0"
edition = "2024"
authors.workspace = true

[features]
default = []
# serde = ["serde"]
# Forward to blindbit-lib's P2P protocol timeline tracing.
p2p-trace = ["blindbit-lib/p2p-trace"]

[dependencies]
blindbit-lib = { path = "../blindbit-lib", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
axum = "0.8.7"
hex = "0.4.3"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0"
bitcoin = "0.32.7"

# due to bitcoin-p2p using a different version
bitcoin-rev = { git = "https://github.com/rust-bitcoin/rust-bitcoin", rev = "16cc257c3695dea0e7301a5fa9cab44b8ed60598", package = "bitcoin" }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
